Add keda chart and scale obj

--- a/deployment/helmfile/00-infra.yaml
+++ b/deployment/helmfile/00-infra.yaml
@@ -64,3 +64,11 @@ releases:
       - releases/certificates/values-backoffice-{{ .Environment.Name }}.yaml
     needs:
       - cert-cluster-issuer
+
+  - name: keda
+    namespace: monitoring
+    chart: kedacore/keda
+    installed: {{ .Values.monitoring.enabled | toYaml }}
+    version: 2.5.1
+    values:
+      - releases/keda/values.yaml
