--- a/deployment/helmfile/defaults.yaml
+++ b/deployment/helmfile/defaults.yaml
@@ -9,6 +9,8 @@ repositories:
   url: https://charts.jetstack.io
 - name: zifter
   url: https://zifter.github.io/helm-charts/
+- name: kedacore
+  url: https://kedacore.github.io/charts
 
 helmDefaults:
   wait: true
