--- a/deployment/charts/worker/templates/scaledobject.yaml
+++ b/deployment/charts/worker/templates/scaledobject.yaml
@@ -1,22 +1,14 @@
-{{- if .Values.autoscaling.enabled }}
-apiVersion: keda.k8s.io/v1alpha1
+apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-  name: {{ include "worker.fullname" . }}
-  labels:
-    {{- include "worker.labels" . | nindent 4 }}
+  name: prometheus-scaledobj
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
     name: {{ include "worker.fullname" . }}
-  pollingInterval: 15
-  cooldownPeriod:  30
-  minReplicaCount: 1
-  maxReplicaCount: 10
   triggers:
-  - type: prometheus
-    metadata:
-      metricName: rq_jobs
-      threshold: '3'
-      query: sum(rq_jobs{status="queued"})
+    - type: prometheus
+      metadata:
+        serverAddress: http://10.244.0.12:8080/prometheus
+        metricName: rq_worker_total_amount
+        threshold: '3'
+        query: count(rq_jobs{status=~"queued", queue=~"crawler-feed"})
