--- a/deployment/charts/worker/templates/scaledobject.yaml
+++ b/deployment/charts/worker/templates/scaledobject.yaml
@@ -4,11 +4,11 @@ metadata:
   name: {{ include "worker.fullname" . }}
 spec:
   scaleTargetRef:
-    name: {{ include "worker.futllname" . }}
+    name: {{ include "worker.fullname" . }}
   triggers:
     - type: prometheus
       metadata:
-        serverAddress: http://prometheus-operated.monitoring.svc/prometheus
+        serverAddress: http://prometheus-operated.monitoring.svc:9090/prometheus
         metricName: rq_worker_total_amount
         threshold: '3'
-        query: sum(rq_jobs{status="queued",%20queue="crawler-feed"})
+        query: sum(rq_jobs{status="queued", queue="crawler-feed"})
