--- a/deployment/charts/worker/templates/scaledobject.yaml
+++ b/deployment/charts/worker/templates/scaledobject.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   scaleTargetRef:
     name: {{ include "worker.fullname" . }}
+  cooldownPeriod:  60
+  minReplicaCount: 1
+  maxReplicaCount: 10
   triggers:
     - type: prometheus
       metadata:
