Fixed keda chart

--- a/deployment/helmfile/00-infra.yaml
+++ b/deployment/helmfile/00-infra.yaml
@@ -66,9 +66,11 @@ releases:
       - cert-cluster-issuer
 
   - name: keda
-    namespace: monitoring
+    namespace: kube-system
     chart: kedacore/keda
     installed: {{ .Values.monitoring.enabled | toYaml }}
     version: 2.5.1
     values:
       - releases/keda/values.yaml
+    needs:
+     - prometheus-stack
