--- a/backend/fixtures/test/products.yaml
+++ b/backend/fixtures/test/products.yaml
@@ -2,7 +2,7 @@
   pk: 1
   fields:
     name: Vitek VT-1505
-    category: coffee_machines
+    category: coffee
 - model: marketplace.product
   pk: 2
   fields:
@@ -17,64 +17,64 @@
   pk: 4
   fields:
     name: Samsung QE50LS01TBU
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 5
   fields:
     name: Samsung QE50LS01TBUA
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 6
   fields:
     name: Samsung QE50LS01TBUAD
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 7
   fields:
     name: Samsung 1123131ADDA
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 8
   fields:
     name: Samsung 1213123
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 9
   fields:
     name: Samsung ZAXAXAX
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 10
   fields:
     name: Samsung QEZXZ50LS01TBU
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 11
   fields:
     name: Samsung QESS50LS01TBU
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 12
   fields:
     name: Samsung QE50L
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 13
   fields:
     name: Samsung ZZZAAZ
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 14
   fields:
     name: Samsung QE50LS01TBUTEST
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 15
   fields:
     name: Samsung AZAZAA
-    category: TV
+    category: tv
 - model: marketplace.product
   pk: 16
   fields:
     name: Смартфон POCO X3 Pro 6GB/128GB международная версия (черный)
-    category: MOBILE
+    category: mobile
