Remove other codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,1 @@
-# It's better to manage it via teams, but it's allowed only in organizations
-* @zifter @AlexanderPoleshchuk @Anthonykuzmich @ElenaVolchkova @HarbatauViktar @mikhailgontarev @pavelsafary
+* @zifter
