--- a/deployment/charts/worker/templates/scaledobject.yaml
+++ b/deployment/charts/worker/templates/scaledobject.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.autoscalingKEDA.enabled }}
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
@@ -6,11 +7,13 @@ spec:
   scaleTargetRef:
     name: {{ include "worker.fullname" . }}
   cooldownPeriod:  60
-  maxReplicaCount: 10
+  minReplicaCount: {{ .Values.autoscalingKEDA.minReplicas }}
+  maxReplicaCount: {{ .Values.autoscalingKEDA.maxReplicas }}
   triggers:
     - type: prometheus
       metadata:
-        serverAddress: http://prometheus-operated.monitoring.svc:9090/prometheus
+        serverAddress: {{ .Values.autoscalingKEDA.prometheusUrl }}
         metricName: rq_worker_total_amount
-        threshold: '3'
-        query: sum(rq_jobs{status="queued", queue="crawler-feed"})
+        threshold: {{ .Values.autoscalingKEDA.threshold | quote }}
+        query: sum(rq_jobs{status="queued", queue=~"{{ join "|" .Values.rqQueues }}")
+{{- end }}
