Add keda chart and configured with it Horizontal Auto Scaling for workers (#122)
* Add keda chart and scale obj

* Changed scaledobj.yaml, but still doesnt work

* Fixed name of scaledobject + changed serverAddress to DNS, but it still doesnt work

* Configured finally scaledobject and it works

* Add specifications for scaledobject

* Removed minReplicaCount for workers

* Returned  monitoring for local to false

* Fixed keda chart

* Some improvements for autoscalingKEDA

Co-authored-by: anton <anton@wsa-173-72a.icx.local>
Co-authored-by: zifter <zifter.ai@gmail.com>

--- a/deployment/helmfile/00-infra.yaml
+++ b/deployment/helmfile/00-infra.yaml
@@ -64,3 +64,13 @@ releases:
       - releases/certificates/values-backoffice-{{ .Environment.Name }}.yaml
     needs:
       - cert-cluster-issuer
+
+  - name: keda
+    namespace: kube-system
+    chart: kedacore/keda
+    installed: {{ .Values.monitoring.enabled | toYaml }}
+    version: 2.5.1
+    values:
+      - releases/keda/values.yaml
+    needs:
+     - prometheus-stack
