--- a/deployment/charts/cms/templates/build-index.yaml
+++ b/deployment/charts/cms/templates/build-index.yaml
@@ -40,6 +40,7 @@ spec:
                 - --rebuild
                 - -f
               env:
+                {{- include "cms-lib.sentry" . | nindent 16 }}
                 {{- include "cms-lib.env" . | nindent 16 }}
               resources:
                 {{- toYaml .Values.resources | nindent 16 }}
