--- a/deployment/charts/worker/values.yaml
+++ b/deployment/charts/worker/values.yaml
@@ -1,6 +1,8 @@
 # Default values for worker.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+envName: 'env-unknown'
+release: 'release-unknown'
 
 replicaCount: 1
 
