--- a/deployment/helmfile/releases/backend/worker/values-etc.yaml
+++ b/deployment/helmfile/releases/backend/worker/values-etc.yaml
@@ -1,3 +1,14 @@
+resources:
+  requests:
+    cpu: "150m"
+    memory: "150Mi"
+  limits:
+    cpu: "250m"
+    memory: "200Mi"
+
 rqQueues:
   - crawler-result
   - search-query
+
+autoscalingKEDA:
+  threshold: 20
