--- a/deployment/charts/cms/templates/deployment.yaml
+++ b/deployment/charts/cms/templates/deployment.yaml
@@ -56,6 +56,7 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       initContainers:
+        # MIGRATE
         - name: migrate
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
@@ -70,6 +71,8 @@ spec:
             {{- include "cms-lib.env" . | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+
+        # PREPARE INDEX
         - name: prepare-index
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
@@ -84,6 +87,50 @@ spec:
             {{- include "cms-lib.env" . | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+
+        # LOAD DATA
+{{- if .Values.fixtures }}
+        - name: load-data
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - python3
+            - manage.py
+            - loaddata
+{{- range $queue := .Values.fixtures }}
+            - {{ $queue }}
+{{- end }}
+          env:
+            {{- include "cms-lib.sentry" . | nindent 12 }}
+            {{- include "cms-lib.env" . | nindent 12 }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+{{- end }}
+
+{{- if .Values.admin.create }}
+        # Create admin user
+        - name: create-admin-user
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - python3
+            - manage.py
+            - create-admin-user
+            - "--username"
+            - {{ .Values.admin.user | quote }}
+            - "--password"
+            - {{ .Values.admin.pass | quote }}
+          env:
+            {{- include "cms-lib.sentry" . | nindent 12 }}
+            {{- include "cms-lib.env" . | nindent 12 }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+{{- end }}
+
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
