Turn off prometheus ingress, fix search query

--- a/deployment/helmfile/releases/prometheus-stack/values-prod.yaml
+++ b/deployment/helmfile/releases/prometheus-stack/values-prod.yaml
@@ -4,6 +4,7 @@ prometheus:
     routePrefix: "/prometheus"
 
   ingress:
+    enabled: false # TODO Make auth proxy to access this site
     annotations:
       nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
     tls:
