Some fixes from overview

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,10 +13,12 @@ body:
       label: Что произошло?
       description: Опишите подробно, что произошло и что вы ожидаете?
       value: |
-        Текущее пеоведение:
+        Текущее поведение:
         *
+
         Ожидаемый результат:
         *
+
         Шаги воспроизведения:
         *
     validations:
