--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -37,11 +37,11 @@ jobs:
 
       - name: Build Docker Image
         working-directory: ./backend
-        run: make image-build IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+        run: make image-build IMAGE_TAG=${GITHUB_REF##*/}
 
       - name: Check Migrations Docker Image
         working-directory: ./backend
-        run: make image-migrations-check IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+        run: make image-migrations-check IMAGE_TAG=${GITHUB_REF##*/}
 
       - name: Docker Compose Up
         working-directory: ./backend
@@ -49,7 +49,7 @@ jobs:
 
       - name: Test Docker Image
         working-directory: ./backend
-        run: make image-test IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+        run: make image-test IMAGE_TAG=${GITHUB_REF##*/}
 
       - name: Publish Docker Image
         env:
@@ -58,7 +58,7 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         run: |
           make docker-login DOCKER_USER=$DOCKER_USER DOCKER_PASS=$DOCKER_PASS
-          make backend-image-publish IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+          make backend-image-publish IMAGE_TAG=${GITHUB_REF##*/}
 
   test-mac:
     runs-on: macos-11
