--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,8 @@
 name: deploy
 on:
-  workflow_run:
-    workflows: ["backend-ci"]
-    tags: ['*']
-    types:
-      - completed
+  release:
+    types: [published]
+  workflow_dispatch: {}
 
 jobs:
   deploy:
