--- a/.github/workflows/_ci_deployment.yaml
+++ b/.github/workflows/_ci_deployment.yaml
@@ -1,12 +1,17 @@
 name: deploy
 on:
-  release:
-    types: [published]
-  workflow_dispatch: {}
-
+  workflow_call:
+    inputs:
+      validate:
+        required: false
+        type: boolean
+        default: true
+      deploy:
+        required: false
+        type: boolean
+        default: false
 jobs:
   deploy:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
@@ -21,7 +26,29 @@ jobs:
           helm-version: "v3.6.3"
           helmfile-version: "v0.140.1"
 
+      - name: Validate
+        if: ${{ inputs.validate }}
+        working-directory: ./deployment
+        env:
+          BACKEND_IMAGE_SHA256: test
+          FRONTEND_IMAGE_SHA256: test
+          POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
+          POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASS: ${{ secrets.POSTGRES_PASS }}
+          POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+          GRAFANA_USER: ${{ secrets.GRAFANA_USER }}
+          GRAFANA_PASS: ${{ secrets.GRAFANA_PASS }}
+          DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
+        run: |
+          make validate
+          mkdir /home/runner/.kube
+          echo "${{ secrets.KUBECONFIG }}" > /home/runner/.kube/config
+          touch .env
+          make helmfile-prod ARGS=template
+
       - name: Deploy
+        if: ${{ inputs.deploy }}
         working-directory: ./deployment
         env:
           POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
