--- a/.github/workflows/_ci_frontend.yaml
+++ b/.github/workflows/_ci_frontend.yaml
@@ -1,20 +1,15 @@
-name: frontend-ci
+name: ci-frontend
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - '**/frontend-ci.yaml'
-      - frontend/**
-      - Makefile
-
-  pull_request:
-    branches:
-      - main
-    paths:
-      - '**/frontend-ci.yaml'
-      - frontend/**
-      - Makefile
+  workflow_call:
+    inputs:
+      test:
+        required: false
+        type: boolean
+        default: true
+      publish:
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   test:
@@ -35,6 +30,7 @@ jobs:
         run: make lint
 
       - name: Test
+        if: ${{ inputs.test }}
         working-directory: ./frontend
         run: make test
 
@@ -45,7 +41,7 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        if: ${{ inputs.publish }}
         run: |
           make docker-login DOCKER_USER=$DOCKER_USER DOCKER_PASS=$DOCKER_PASS
           make frontend-image-publish IMAGE_TAG=${GITHUB_REF##*/}
