--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -13,7 +13,7 @@ on:
       - Makefile
 
 concurrency:
-  group: ci-backend-${{ github.ref }}
+  group: ci-frontend-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
