Fix deployment validating for local env

--- a/.github/workflows/_ci_deployment.yaml
+++ b/.github/workflows/_ci_deployment.yaml
@@ -30,7 +30,7 @@ jobs:
         if: ${{ inputs.validate }}
         working-directory: ./deployment
         run: |
-          make validate
+          make validate-local
 
       - name: Validate Prod
         if: ${{ inputs.validate }}
