Pass DOCKER AUTH

--- a/.github/workflows/_ci_frontend.yaml
+++ b/.github/workflows/_ci_frontend.yaml
@@ -10,7 +10,11 @@ on:
         required: false
         type: boolean
         default: false
-
+    secrets:
+      DOCKER_USER:
+        required: false
+      DOCKER_PASS:
+        required: false
 jobs:
   test:
     runs-on: ubuntu-latest
