--- a/.github/workflows/_ci_deployment.yaml
+++ b/.github/workflows/_ci_deployment.yaml
@@ -11,6 +11,8 @@ on:
         type: boolean
         default: false
     secrets:
+      KUBECONFIG:
+        required: false
       POSTGRES_DATABASE:
         required: true
       POSTGRES_HOST:
@@ -83,4 +85,5 @@ jobs:
           mkdir /home/runner/.kube
           echo "${{ secrets.KUBECONFIG }}" > /home/runner/.kube/config
           touch .env
+          kubectl config current-context
           make helmfile-prod BACKEND_IMAGE_TAG=${GITHUB_REF##*/} FRONTEND_IMAGE_TAG=${GITHUB_REF##*/} GIT_RELEASE=${GITHUB_REF##*/} ARGS=apply
