--- a/.github/workflows/_ci_backend.yaml
+++ b/.github/workflows/_ci_backend.yaml
@@ -28,6 +28,7 @@ jobs:
         run: make image-build IMAGE_TAG=${GITHUB_REF##*/}
 
       - name: Check Migrations Docker Image
+        if: ${{ inputs.test }}
         working-directory: ./backend
         run: make image-migrations-check IMAGE_TAG=${GITHUB_REF##*/}
 
