Add detach button to product page admin pannel, which check if product suits to product page

--- a/backend/fixtures/prod/categories.yaml
+++ b/backend/fixtures/prod/categories.yaml
@@ -1,5 +1,9 @@
 - model: marketplace.category
   fields:
+    name: undefined
+    keywords: undefined
+- model: marketplace.category
+  fields:
     name: mobile
     keywords: кнопочные телефоны, смартфоны
 - model: marketplace.category
